# SEMI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
assets/: VEngineDefault.ini  test.lua
examples/: CMakeLists.txt
examples/enginemodule/: BlankEngineModule.cpp  BlankEngineModule.hpp  CMakeLists.txt  ModuleMain.cpp
include/vengine/: BaseEngineModule.hpp  CommonTypes.hpp  IEngineClient.hpp  IEngineCore.hpp  IEngineModule.hpp  IEngineServer.hpp  INetAdr.hpp  INetClient.hpp  INetServer.hpp  Logging.hpp  PlatformTypes.hpp
include/vengine/client/: IClientEnv.hpp  IEngineClient.hpp  IInputEventDispatcher.hpp  IInputEventListener.hpp
include/vengine/clientgame/: IClientGame.hpp
include/vengine/core/: BaseSysCmd.hpp  ICmdArgs.hpp  ICmdProcessor.hpp  ICmdRegistry.hpp  ICommandLine.hpp  IConfig.hpp  ICoreEnv.hpp  ICvar.hpp  ICvarRegistry.hpp  IEngineCore.hpp  IEngineModuleContainer.hpp  IFile.hpp  IFileSystem.hpp  ILogger.hpp  IMemoryManager.hpp  IMemoryPool.hpp  IStartupArgs.hpp  ISysCmd.hpp  ISysVar.hpp  ISystem.hpp
include/vengine/framework/: IVEngine.hpp
include/vengine/game/: IGame.hpp
include/vengine/input/: IInput.hpp  InputTypes.hpp
include/vengine/network/: INetAdr.hpp  INetChannel.hpp  INetClient.hpp  INetServer.hpp  INetwork.hpp
include/vengine/physics/: IPhysics.hpp  IPhysicsBody.hpp  IPhysicsWorld.hpp
include/vengine/platform/: PlatformAndroid.hpp  PlatformApple.hpp  PlatformLinux.hpp  PlatformUnix.hpp  PlatformWindows.hpp
include/vengine/script/: IScript.hpp
include/vengine/server/: IEngineServer.hpp  IServerEnv.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  EngineClient.cpp  EngineClient.hpp  Exports.cpp  IRenderWindow.hpp  NetClient.cpp  NetClient.hpp  RenderWindowGLFW.cpp  RenderWindowGLFW.hpp
src/clientgame/: CMakeLists.txt  ClientGame.cpp  ClientGame.hpp  ClientGameModule.cpp  Exports.cpp
src/core/: CMakeLists.txt  DedicatedClientMode.cpp  DedicatedClientMode.hpp  DedicatedServerMode.cpp  DedicatedServerMode.hpp  EngineCore.cpp  EngineCore.hpp  Exports.cpp  IEngineExecMode.hpp  IEngineExecStrategy.hpp  IEngineFrameListener.hpp  ListenServerMode.cpp  ListenServerMode.hpp  ModuleLoader.hpp  ModuleManager.hpp  NetAdr.cpp  NetAdr.hpp  Timer.cpp  Timer.hpp
src/dedicated/: CMakeLists.txt  main.cpp
src/editor/: CMakeLists.txt
src/editor/projutil/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/client/: CMakeLists.txt  EngineClient.cpp  EngineClient.hpp  EngineClientModule.cpp  EngineEnv.cpp  EngineEnv.hpp  Exports.cpp  IRenderWindow.hpp  InputEventDispatcher.cpp  InputEventDispatcher.hpp  NetClient.cpp  NetClient.hpp  RenderWindowGLFW.cpp  RenderWindowGLFW.hpp  TestInputEventListener.hpp
src/engine/core/: CMakeLists.txt  CmdArgs.cpp  CmdArgs.hpp  CmdProcessor.cpp  CmdProcessor.hpp  CmdRegistry.cpp  CmdRegistry.hpp  Config.hpp  CoreEnv.cpp  CoreEnv.hpp  Cvar.cpp  Cvar.hpp  CvarRegistry.cpp  CvarRegistry.hpp  DedicatedClientMode.cpp  DedicatedClientMode.hpp  DedicatedServerMode.cpp  DedicatedServerMode.hpp  EngineCore.cpp  EngineCore.hpp  EngineModule.cpp  EngineModule.hpp  EngineModuleContainer.cpp  EngineModuleContainer.hpp  Exports.cpp  IEngineExecMode.hpp  ListenServerMode.cpp  ListenServerMode.hpp  LogSinkInternal.hpp  Logger.cpp  Logger.hpp  MemoryManager.cpp  MemoryManager.hpp  ModuleLoader.hpp  ModuleManager.hpp  StartupArgs.cpp  StartupArgs.hpp  SysCmdRegistry.cpp  SysCmdRegistry.hpp  SysVar.cpp  (+9 more)
src/engine/core/unused/: IEngineFrameListener.hpp  ModuleManager.cpp
src/engine/framework/: CMakeLists.txt  Config.cpp  DedicatedClientMode.hpp  DedicatedServerMode.cpp  DedicatedServerMode.hpp  EngineFrameworkModule.cpp  IEngineExecMode.hpp  VEngine.cpp  VEngine.hpp
src/engine/input/: CMakeLists.txt  Exports.cpp  Input.cpp  Input.hpp  InputEventDispatcher.cpp  InputEventDispatcher.hpp  InputModule.cpp
src/engine/module/: CMakeLists.txt  TestEngineModule.cpp
src/engine/network/: CMakeLists.txt  Exports.cpp  INetworkImpl.hpp  NetAdr.cpp  NetAdr.hpp  NetClient.cpp  NetClient.hpp  NetServer.cpp  NetServer.hpp  Network.cpp  Network.hpp  NetworkModule.cpp  NetworkTypes.hpp
src/engine/network/win/: NetworkWinSock2.cpp  NetworkWinSock2.hpp
src/engine/physics/: CMakeLists.txt  Exports.cpp  PhysicsBodyBullet.cpp  PhysicsBodyBullet.hpp  PhysicsModule.cpp  PhysicsWorldBullet.cpp  PhysicsWorldBullet.hpp
src/engine/script/: CMakeLists.txt  Exports.cpp  Script.cpp  Script.hpp  ScriptLua.cpp  ScriptLua.hpp  ScriptModule.cpp
src/engine/server/: CMakeLists.txt  Client.cpp  Client.hpp  EngineEnv.cpp  EngineEnv.hpp  EngineServer.cpp  EngineServer.hpp  EngineServerModule.cpp  Exports.cpp  IClient.hpp  NetServer.cpp  NetServer.hpp
src/engine/sound/: CMakeLists.txt  Exports.cpp  Sound.cpp  Sound.hpp  SoundModule.cpp
src/game/: CMakeLists.txt  Exports.cpp  Game.cpp  Game.hpp  GameModule.cpp
src/launcher/: CMakeLists.txt  Launcher.cpp  main.cpp
src/launcher/unix/: main.cpp
src/launcher/win/: WinMain.cpp
src/server/: EngineServer.cpp  EngineServer.hpp  Exports.cpp  IClient.hpp  NetServer.cpp  NetServer.hpp
